--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,7 +2,16 @@
   "translation": {
     "common": {
       "unabledecode": "Unable to decode address",
-      "copied": "Copied"
+      "copied": "Copied",
+      "detail": "Detail",
+      "overview": "Overview",
+      "block": "Block",
+      "blockheight": "Block Height",
+      "transactions": "Transactions",
+      "transactionfee": "Transaction Fee",
+      "timestamp": "Timestamp",
+      "miner": "Miner",
+      "difficulty": "Difficulty"
     },
     "navbar": {
       "wallet": "Wallet",
@@ -14,7 +23,6 @@
     "blockchaindata": {
       "bestblock": "Best Block",
       "bestblock_extra": "The latest block of the best chain",
-      "difficulty": "Difficulty",
       "difficulty_extra": "Difficulty of the lastest Epoch",
       "hashrate": "Hash Rate",
       "hashrate_extra": "Average Hash Rate of the last 500 blocks",
@@ -25,7 +33,6 @@
       "height": "Height",
       "transactions": "Transactions",
       "blockreward": "Block Reward (CKB)",
-      "miner": "Miner",
       "time": "Time",
       "more": "More"
     },
@@ -50,9 +57,7 @@
     "details": {
       "address": "Address",
       "lockhash": "Lock Hash",
-      "overview": "Overview",
       "balance": "Balance",
-      "transactions": "Transactions",
       "pendingreward": "Pending Reward",
       "codehash": "Code Hash",
       "args": "Args",
