--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,17 +1,9 @@
 {
   "translation": {
     "common": {
-      "unabledecode": "Unable to decode address",
       "copied": "Copied",
       "detail": "Detail",
-      "overview": "Overview",
-      "block": "Block",
-      "block_height": "Block Height",
-      "transactions": "Transactions",
-      "transaction_fee": "Transaction Fee",
-      "timestamp": "Timestamp",
-      "miner": "Miner",
-      "difficulty": "Difficulty"
+      "overview": "Overview"
     },
     "toast": {
       "invalid_content": "Please input valid content",
@@ -22,18 +14,18 @@
       "docs": "Docs",
       "search_placeholder": "Block / Transaction / Address",
       "network": "TESTNET",
-      "network_extra": "Mainnet is comming"
+      "network_tooltip": "Mainnet is comming"
     },
-    "blockchain_data": {
+    "blockchain": {
       "best_block": "Best Block",
-      "bestblock_extra": "The latest block of the best chain",
-      "difficulty_extra": "Difficulty of the lastest Epoch",
+      "best_block_tooltip": "The latest block of the best chain",
+      "difficulty_tooltip": "Difficulty of the lastest Epoch",
       "hash_rate": "Hash Rate",
-      "hash_rate_extra": "Average Hash Rate of the last 500 blocks",
+      "hash_rate_tooltip": "Average Hash Rate of the last 500 blocks",
       "average_block_time": "Average Block Time",
-      "average_block_time_extra": "Average Block Time of the last 24 hours"
+      "average_block_time_tooltip": "Average Block Time of the last 24 hours"
     },
-    "home_common": {
+    "home": {
       "height": "Height",
       "transactions": "Transactions",
       "block_reward": "Block Reward (CKB)",
@@ -44,12 +36,10 @@
       "nervos_foundation": "Nervos Foundation",
       "about_us": "About Us",
       "faq": "FAQ",
-
       "developer": "Developer",
       "api": "API",
       "gitHub": "GitHub",
       "whitepaper": "Whitepaper",
-
       "community": "Community",
       "twitter": "Twitter",
       "blog": "Blog",
@@ -58,7 +48,7 @@
       "youtube": "YouTube",
       "forum": "forum"
     },
-    "details": {
+    "address": {
       "address": "Address",
       "lock_hash": "Lock Hash",
       "balance": "Balance",
@@ -66,10 +56,13 @@
       "code_hash": "Code Hash",
       "args": "Args",
       "confirmation": "Confirmation",
-      "pending_reward_tool_tip": "The block reward and transaction fee of this block will send to the miner after 11 blocks，learn more from our Consensus Protocol"
+      "unable_decode_address": "Unable to decode address",
+      "pending_reward_tooltip": "The block reward and transaction fee of this block will send to the miner after 11 blocks，learn more from our Consensus Protocol"
     },
     "transaction": {
       "transaction": "Transaction",
+      "transactions": "Transactions",
+      "transaction_fee": "Transaction Fee",
       "input": "Input",
       "output": "Output",
       "lock_script": "Lock Script",
@@ -78,9 +71,11 @@
       "base_reward": "Base Reward",
       "commit_reward": "Commit Reward",
       "proposal_reward": "Proposal Reward",
-      "cellbase_help_content": "The cellbase transaction of block N is send to the miner of block N-11 as reward. The reward is consist of Base Reward, Commit Reward and Proposal Reward, learn more from our Consensus Protocol"
+      "cellbase_help_tooltip": "The cellbase transaction of block N is send to the miner of block N-11 as reward. The reward is consist of Base Reward, Commit Reward and Proposal Reward, learn more from our Consensus Protocol"
     },
     "block": {
+      "block": "Block",
+      "block_height": "Block Height",
       "proposal_transactions": "Proposal Transactions",
       "block_reward": "Block Reward",
       "uncle_count": "Uncle Count",
@@ -89,8 +84,12 @@
       "epoch_length": "Epoch Length",
       "nonce": "Nonce",
       "proof": "Proof",
+      "timestamp": "Timestamp",
+      "miner": "Miner",
+      "difficulty": "Difficulty",
       "transactions_root": "Transactions Root",
       "witnesses_root": "Witnesses Root"
     }
   }
 }
+
