--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -67,6 +67,7 @@
       "transaction": "Transaction",
       "transactions": "Transactions",
       "transaction_fee": "Transaction Fee",
+      "status": "Status",
       "input": "Input",
       "output": "Output",
       "lock_script": "Lock Script",
@@ -95,6 +96,9 @@
       "witnesses_root": "Witnesses Root",
       "pending_tip": "The block reward of this block will send to the miner after 11 blocks，learn more from our Consensus Protocol",
       "calculating_tip": "The transaction fee of this block will send to the miner after 11 blocks，learn more from our Consensus Protocol"
+    },
+    "error": {
+      "maintenance": "The site is temporarily down for maintenance. Please check back soon."
     }
   }
 }
