fix: fix footer forum error

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -46,7 +46,7 @@
       "telegram": "Telegram",
       "reddit": "Reddit",
       "youtube": "YouTube",
-      "forum": "forum"
+      "forum": "Forum"
     },
     "search": {
       "empty_result": "Opps! Your search did not match any record. Please try different keywords~"
