--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -98,7 +98,7 @@
       "calculating_tip": "The transaction fee of this block will send to the miner after 11 blocks，learn more from our Consensus Protocol"
     },
     "error": {
-      "maintenance": "The site is temporarily down for maintenance. Please check back soon."
+      "maintain": "The site is temporarily down for maintenance. Please check back soon."
     }
   }
 }
