--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -102,6 +102,12 @@
     },
     "error": {
       "maintain": "The site is temporarily down for maintenance. Please check back soon."
+    },
+    "Pagination": {
+      "first": "First",
+      "last": "Last",
+      "goto": "Goto",
+      "page": "Page"
     }
   }
 }
