--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -103,7 +103,7 @@
     "error": {
       "maintain": "The site is temporarily down for maintenance. Please check back soon."
     },
-    "Pagination": {
+    "pagination": {
       "first": "First",
       "last": "Last",
       "goto": "Goto",
