--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -14,7 +14,7 @@
       "wallet": "Wallet",
       "charts": "Charts",
       "docs": "Docs",
-      "search_placeholder": "Block / Transaction / Address",
+      "search_placeholder": "Block / Transaction / Address / Lock Hash",
       "network": "TESTNET",
       "network_tooltip": "Mainnet is comming"
     },
