--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -79,7 +79,9 @@
       "base_reward": "Base Reward",
       "commit_reward": "Commit Reward",
       "proposal_reward": "Proposal Reward",
-      "cellbase_help_tooltip": "The cellbase transaction of block N is send to the miner of block N-11 as reward, learn more from our Consensus Protocol"
+      "cellbase_help_tooltip": "The cellbase transaction of block N is send to the miner of block N-11 as reward, learn more from our Consensus Protocol",
+      "capacity": "Capacity",
+      "detail": "Detail"
     },
     "block": {
       "block": "Block",
