--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -64,7 +64,7 @@
       "confirmation": "Confirmation",
       "confirmations": "Confirmations",
       "unable_decode_address": "Unable to decode address",
-      "pending_reward_tooltip": "The block reward and transaction fee of this block will send to the miner after 11 blocks，learn more from our Consensus Protocol"
+      "pending_reward_tooltip": "The block reward and transaction fee of this block will be sent to the miner after 11 blocks，learn more from our Consensus Protocol"
     },
     "transaction": {
       "transaction": "Transaction",
@@ -100,8 +100,8 @@
       "difficulty": "Difficulty",
       "transactions_root": "Transactions Root",
       "witnesses_root": "Witnesses Root",
-      "pending_tip": "The block reward of this block will send to the miner after 11 blocks，learn more from our Consensus Protocol",
-      "calculating_tip": "The transaction fee of this block will send to the miner after 11 blocks，learn more from our Consensus Protocol"
+      "pending_tip": "The block reward of this block will be sent to the miner after 11 blocks，learn more from our Consensus Protocol",
+      "calculating_tip": "The transaction fee of this block will be sent to the miner after 11 blocks，learn more from our Consensus Protocol"
     },
     "error": {
       "maintain": "The site is temporarily down for maintenance. Please check back soon."
