chore: update copy button to support chinese

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,6 +2,7 @@
   "translation": {
     "common": {
       "copied": "Copied",
+      "copy": "Copy",
       "detail": "Detail",
       "overview": "Overview",
       "view_all": "View All",
