--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -2,6 +2,7 @@
   "translation": {
     "common": {
       "copied": "已复制",
+      "copy": "复制",
       "detail": "详情",
       "overview": "总概",
       "view_all": "查看全部",
