feat: adapt chart page to chinese

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -96,12 +96,15 @@
       "uncle_count": "Uncle Count",
       "epoch": "Epoch",
       "epoch_start_number": "Epoch Start Number",
+      "epoch_number": "Epoch Number",
       "epoch_length": "Epoch Length",
       "nonce": "Nonce",
       "proof": "PoW Proof",
       "timestamp": "Timestamp",
       "miner": "Miner",
       "difficulty": "Difficulty",
+      "hash_rate_gps": "Hash Rate(gps)",
+      "hash_rate": "Hash Rate",
       "transactions_root": "Transactions Root",
       "witnesses_root": "Witnesses Root",
       "pending_tip": "The block reward of this block will be sent to the miner after 11 blocks，learn more from our Consensus Protocol",
