--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -96,12 +96,15 @@
       "uncle_count": "叔块数",
       "epoch": "Epoch",
       "epoch_start_number": "Epoch 开始区块",
+      "epoch_number": "Epoch 区块",
       "epoch_length": "Epoch 长度",
       "nonce": "随机数",
       "proof": "PoW Proof",
       "timestamp": "时间戳",
       "miner": "矿工",
       "difficulty": "难度",
+      "hash_rate_gps": "哈希率(gps)",
+      "hash_rate": "哈希率",
       "transactions_root": "Transactions Root",
       "witnesses_root": "Witnesses Root",
       "pending_tip": "区块奖励将在11个区块后发送给矿工，阅读共识协议了解更多信息！",
