--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -68,7 +68,7 @@
       "confirmation": "确认区块",
       "confirmations": "确认区块",
       "unable_decode_address": "地址解析失败",
-      "pending_reward_tooltip": "区块奖励与交易费将在 11 个区块后发送给矿工，阅读共识协议了解更多信息！"
+      "pending_reward_tooltip": "区块奖励与交易费将在 11 个区块后发送给矿工，阅读共识协议了解更多信息"
     },
     "transaction": {
       "transaction": "交易",
@@ -107,8 +107,8 @@
       "hash_rate": "哈希率",
       "transactions_root": "Transactions Root",
       "witnesses_root": "Witnesses Root",
-      "pending_tip": "区块奖励将在 11 个区块后发送给矿工，阅读共识协议了解更多信息！",
-      "calculating_tip": "交易费将在 11 个区块后发送给矿工，阅读共识协议了解更多信息！"
+      "pending_tip": "区块奖励将在 11 个区块后发送给矿工，阅读共识协议了解更多信息",
+      "calculating_tip": "交易费将在 11 个区块后发送给矿工，阅读共识协议了解更多信息"
     },
     "error": {
       "maintain": "网络维护中，请稍后再试"
