chore: update i18n nervos foundation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -39,7 +39,7 @@
       "more": "More"
     },
     "footer": {
-      "nervos_foundation": "Nervos Foundation",
+      "nervos_foundation": "Foundation",
       "about_us": "About Us",
       "faq": "FAQ",
       "developer": "Developer",
