--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -39,7 +39,7 @@
       "more": "更多"
     },
     "footer": {
-      "nervos_foundation": "Nervos 基金会",
+      "nervos_foundation": "基金会",
       "about_us": "关于我们",
       "faq": "问答中心",
       "developer": "开发者",
