--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -107,6 +107,8 @@
       "hash_rate": "Hash Rate",
       "transactions_root": "Transactions Root",
       "witnesses_root": "Witnesses Root",
+      "pending": "Pending",
+      "calculating": "Calculating",
       "pending_tip": "The block reward of this block will be sent to the miner after 11 blocks，learn more from our Consensus Protocol",
       "calculating_tip": "The transaction fee of this block will be sent to the miner after 11 blocks，learn more from our Consensus Protocol"
     },
