--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -107,6 +107,8 @@
       "hash_rate": "哈希率",
       "transactions_root": "Transactions Root",
       "witnesses_root": "Witnesses Root",
+      "pending": "发放中",
+      "calculating": "计算中",
       "pending_tip": "区块奖励将在 11 个区块后发送给矿工，阅读共识协议了解更多信息",
       "calculating_tip": "交易费将在 11 个区块后发送给矿工，阅读共识协议了解更多信息"
     },
