feat: replace footer api with docs

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,7 +44,7 @@
       "about_us": "About Us",
       "faq": "FAQ",
       "developer": "Developer",
-      "api": "API",
+      "docs": "Docs",
       "gitHub": "GitHub",
       "whitepaper": "Whitepaper",
       "community": "Community",
