--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -44,7 +44,7 @@
       "about_us": "关于我们",
       "faq": "问答中心",
       "developer": "开发者",
-      "api": "API",
+      "docs": "文档",
       "gitHub": "GitHub",
       "whitepaper": "白皮书",
       "community": "社区",
