chore: use 18n to empty output tip

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -87,7 +87,8 @@
       "proposal_reward": "Proposal Reward",
       "cellbase_help_tooltip": "The cellbase transaction of block N is sent to the miner of block N-11 as reward, learn more from our Consensus Protocol",
       "capacity": "Capacity",
-      "detail": "Detail"
+      "detail": "Detail",
+      "empty_output": "No cell output target"
     },
     "block": {
       "block": "Block",
