--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -87,7 +87,8 @@
       "proposal_reward": "提案奖励",
       "cellbase_help_tooltip": "区块 N 的 Cellbase 交易将作为奖励发送给区块 N-11 的出块矿工，阅读共识协议了解更多信息",
       "capacity": "Capacity",
-      "detail": "详情"
+      "detail": "详情",
+      "empty_output": "No cell output target"
     },
     "block": {
       "block": "区块",
