--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -109,6 +109,7 @@
       "transactions_root": "Transactions Root",
       "witnesses_root": "Witnesses Root",
       "pending": "Pending",
+      "calculating": "Pending",
       "pending_tip": "The block reward of this block will be sent to the miner after 11 blocks，learn more from our Consensus Protocol",
       "calculating_tip": "The transaction fee of this block will be sent to the miner after 11 blocks，learn more from our Consensus Protocol"
     },
