feat: add nervos dao to transaction item

--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -29,7 +29,8 @@
       "hash_rate": "算力",
       "hash_rate_tooltip": "最近 500 个区块的平均算力",
       "average_block_time": "平均出块时间",
-      "average_block_time_tooltip": "当下 Epoch 的平均出块时间"
+      "average_block_time_tooltip": "当下 Epoch 的平均出块时间",
+      "nervos_dao": "NervosDAO"
     },
     "home": {
       "height": "高度",
