--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,7 +29,8 @@
       "hash_rate": "Hash Rate",
       "hash_rate_tooltip": "Average Hash Rate of the last 500 blocks",
       "average_block_time": "Average Block Time",
-      "average_block_time_tooltip": "Average Block Time of the latest epoch"
+      "average_block_time_tooltip": "Average Block Time of the latest epoch",
+      "nervos_dao": "NervosDAO"
     },
     "home": {
       "height": "Height",
