--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -115,6 +115,13 @@
       "pending_tip": "The block reward of this block will be sent to the miner after 11 blocks，learn more from our Consensus Protocol",
       "calculating_tip": "The transaction fee of this block will be sent to the miner after 11 blocks，learn more from our Consensus Protocol"
     },
+    "nervos_dao": {
+      "nervos_dao": "NervosDAO",
+      "total_deposit": "Total Deposit",
+      "transactions": "Transactions",
+      "depositor": "Depositor",
+      "subsidy_granted": "Subsidy Granted"
+    },
     "error": {
       "maintain": "The site is temporarily down for maintenance. Please check back soon."
     },
