--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -116,6 +116,13 @@
       "pending_tip": "区块奖励将在 11 个区块后发送给矿工，阅读共识协议了解更多信息",
       "calculating_tip": "交易费将在 11 个区块后发送给矿工，阅读共识协议了解更多信息"
     },
+    "nervos_dao": {
+      "nervos_dao": "NervosDAO",
+      "total_deposit": "Total Deposit",
+      "transactions": "Transactions",
+      "depositor": "Depositor",
+      "subsidy_granted": "Subsidy Granted"
+    },
     "error": {
       "maintain": "网络维护中，请稍后再试"
     },
