--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,7 +12,8 @@
     "toast": {
       "invalid_content": "Please input valid content",
       "invalid_network": "Network exception, please try again later",
-      "data_too_large": "The data is too large, please view on PC browser"
+      "data_too_large": "The data is too large, please view on PC browser",
+      "result_not_found": "Search result not found"
     },
     "navbar": {
       "wallet": "Wallet",
@@ -120,7 +121,8 @@
       "total_deposit": "Total Deposit",
       "transactions": "Transactions",
       "depositor": "Depositor",
-      "subsidy_granted": "Subsidy Granted"
+      "subsidy_granted": "Subsidy Granted",
+      "dao_search_placeholder": "Transaction / Address"
     },
     "error": {
       "maintain": "The site is temporarily down for maintenance. Please check back soon."
