--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -122,7 +122,13 @@
       "transactions": "Transactions",
       "depositor": "Depositor",
       "subsidy_granted": "Subsidy Granted",
-      "dao_search_placeholder": "Transaction / Address"
+      "dao_search_placeholder": "Transaction / Address",
+      "dao_search_reset": "Reset",
+      "dao_tab_transactions": "Transactions",
+      "dao_tab_depositors": "Depositors",
+      "dao_title_rank": "Rank",
+      "dao_title_address": "Address",
+      "dao_title_deposit_capacity": "Deposit Capacity"
     },
     "error": {
       "maintain": "The site is temporarily down for maintenance. Please check back soon."
