--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -119,11 +119,17 @@
     },
     "nervos_dao": {
       "nervos_dao": "NervosDAO",
-      "total_deposit": "Total Deposit",
-      "transactions": "Transactions",
-      "depositor": "Depositor",
-      "subsidy_granted": "Subsidy Granted",
-      "dao_search_placeholder": "交易 / 地址"
+      "total_deposit": "提现总额",
+      "transactions": "交易数量",
+      "depositor": "提现地址数量",
+      "subsidy_granted": "补贴金额",
+      "dao_search_placeholder": "交易 / 地址",
+      "dao_search_reset": "复位",
+      "dao_tab_transactions": "交易列表",
+      "dao_tab_depositors": "提现地址",
+      "dao_title_rank": "排名",
+      "dao_title_address": "地址",
+      "dao_title_deposit_capacity": "提现金额"
     },
     "error": {
       "maintain": "网络维护中，请稍后再试"
